k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-app-8xcellence-20260925-1454-frontend
  namespace: core-app-8xcellence-20260925-1454
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-app-8xcellence-20260925-1454-frontend
  template:
    metadata:
      labels:
        app: core-app-8xcellence-20260925-1454-frontend
    spec:
      containers:
        - name: frontend
          image: 179678238458.dkr.ecr.eu-west-3.amazonaws.com/cnp-app:core-app-8xcellence-20260925-1454-frontend-latest
          ports:
            - containerPort: 80
